# official-bridge

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md
.github/workflows/: build-and-push-image.yml
bin-version/: Cargo.toml
bin-version/src/: lib.rs
bridge/: Cargo.toml
bridge-cli/: Cargo.toml
bridge-cli/src/: lib.rs  main.rs
bridge-indexer-monitor/: API.md  Cargo.toml  Dockerfile  EMERGENCY_PAUSE.md  README.md  emergency-keys.template.yaml  emergency-signatures.template.yaml  indexer-config.template.yaml  monitor-config-with-validators.yaml  monitor-config.example.yaml  monitor-config.template.yaml
bridge-indexer-monitor/configs/: indexer_test_deployment.yaml  monitor-config.yaml
bridge-indexer-monitor/src/: caught_up.rs  eth_indexer.rs  failover.rs  indexer_progress.rs  lib.rs  main.rs  metrics.rs  network.rs  stc_indexer.rs  telegram.rs
bridge-indexer-monitor/src/api/: fee_cache.rs  gas_service.rs  handlers.rs  mod.rs  quota_cache.rs  types.rs
bridge-indexer-monitor/src/handlers/: mod.rs  stc_event_handler.rs
bridge-indexer-monitor/src/monitor/: config.rs  emergency_pause.rs  events.rs  gap_recovery.rs  gap_recovery_tests.rs  mod.rs  paired_transfer.rs  reorg_handler.rs  state.rs  telegram.rs  tests.rs  validator_health.rs
bridge-indexer-monitor/src/security_monitor/: config.rs  detector.rs  event_organizer.rs  mismatch_checker.rs  mod.rs  pause_executor.rs
bridge-schema/: Cargo.toml
bridge-schema/migrations/00000000000000_diesel_initial_setup/: up.sql
bridge-schema/src/: lib.rs  models.rs  schema.rs
bridge/abi/: bridge_committee.json  bridge_config.json  starcoin_bridge.json
bridge/src/: abi.rs  bridge_status.rs  config.rs  crypto.rs  encoding.rs  error.rs  eth_client.rs  eth_mock_provider.rs  eth_transaction_builder.rs  events.rs  lib.rs  main.rs  metered_eth_provider.rs  metered_starcoin_rpc.rs  metrics.rs  node.rs  simple_starcoin_rpc.rs  starcoin_bridge_client.rs  starcoin_bridge_mock_client.rs  starcoin_bridge_transaction_builder.rs  starcoin_jsonrpc_client.rs  starcoin_node_test.rs  starcoin_test_utils.rs  test_utils.rs  ttl_cache.rs  types.rs  utils.rs
bridge/src/chain_syncer/: mod.rs
bridge/src/chain_syncer/common/: config.rs  events.rs  mod.rs  types.rs  window.rs
bridge/src/chain_syncer/eth/: config.rs  mod.rs  syncer.rs
bridge/src/chain_syncer/starcoin/: config.rs  mod.rs  syncer.rs
bridge/src/client/: bridge_authority_aggregator.rs  bridge_client.rs  mod.rs
bridge/src/e2e_tests/: README.md  anvil_test_utils.rs  local_env_tests.rs  long_flow_harness.rs  mod.rs
bridge/src/finality/: checker.rs  config.rs  eth.rs  mod.rs
bridge/src/pending_events/: mod.rs  store.rs  tracker.rs  types.rs
bridge/src/server/: handler.rs  mock_handler.rs  mod.rs
bridge/src/starcoin_bridge_watchdog/: eth_bridge_status.rs  eth_vault_balance.rs  metrics.rs  mod.rs  starcoin_bridge_status.rs
contracts/evm/: .gitignore  foundry.toml  remappings.txt
contracts/move/: Move.toml  build_embedded_blob.sh
fastcrypto/: Cargo.toml
fastcrypto-derive/: Cargo.toml
fastcrypto-derive/src/: lib.rs
fastcrypto/src/: ed25519.rs  encoding.rs  error.rs  hash.rs  hmac.rs  lib.rs  private_seed.rs  serde_helpers.rs  traits.rs  utils.rs
fastcrypto/src/groups/: mod.rs  secp256k1.rs
fastcrypto/src/groups/multiplier/: bgmw.rs  integer_utils.rs  mod.rs  windowed.rs
fastcrypto/src/secp256k1/: mod.rs  recoverable.rs
fastcrypto/src/tests/: aes_tests.rs  bls12381_group_tests.rs  bls12381_tests.rs  bulletproofs_tests.rs  ed25519_tests.rs  encoding_tests.rs  hash_tests.rs  hmac_tests.rs  merkle_tests.rs  mskr_tests.rs  ristretto255_tests.rs  secp256k1_group_tests.rs  secp256k1_recoverable_tests.rs  secp256k1_tests.rs  secp256r1_group_tests.rs  secp256r1_recoverable_tests.rs  secp256r1_tests.rs  signature_service_tests.rs  test_helpers.rs  utils_tests.rs  vrf_tests.rs
prometheus-closure-metric/: Cargo.toml
prometheus-closure-metric/src/: lib.rs
prometheus-closure-metric/tests/: closure_metric.rs
shared-crypto/: Cargo.toml
shared-crypto/src/: intent.rs
starcoin-bridge-authority-aggregation/: Cargo.toml
starcoin-bridge-authority-aggregation/src/: lib.rs
starcoin-bridge-config/: Cargo.toml
starcoin-bridge-config/src/: lib.rs
starcoin-bridge-field-count/: Cargo.toml
starcoin-bridge-field-count/derive/: Cargo.toml
starcoin-bridge-field-count/src/: lib.rs
starcoin-bridge-indexer-alt-metrics/: Cargo.toml
starcoin-bridge-indexer-alt-metrics/src/: db.rs  lib.rs
starcoin-bridge-indexer-builder/: Cargo.toml
starcoin-bridge-json-rpc-api/: Cargo.toml
starcoin-bridge-json-rpc-types/: Cargo.toml
starcoin-bridge-json-rpc-types/src/: lib.rs
starcoin-bridge-keys/: Cargo.toml
starcoin-bridge-keys/src/: lib.rs
starcoin-bridge-macros/: Cargo.toml
starcoin-bridge-metrics-push-client/: Cargo.toml
starcoin-bridge-metrics-push-client/src/: lib.rs
starcoin-bridge-pg-db/: Cargo.toml
starcoin-bridge-pg-db/migrations/2025-03-28-225607_watermarks/: up.sql
starcoin-bridge-pg-db/src/: lib.rs  model.rs  query.rs  schema.rs  temp.rs  tls.rs
starcoin-bridge-sdk/: Cargo.toml
starcoin-bridge-sdk/src/: error.rs  lib.rs
starcoin-bridge-sql-macro/: Cargo.toml
starcoin-bridge-sql-macro/src/: lexer.rs  lib.rs  parser.rs
starcoin-bridge-types/: Cargo.toml
starcoin-bridge-types/src/: lib.rs  starcoin_transaction_builder.rs
starcoin-bridge-vm-types/: Cargo.toml
starcoin-bridge-vm-types/src/: lib.rs
starcoin-bridge-vm-types/src/bridge/: base_types.rs  bridge.rs  collection_types.rs  committee.rs  crypto.rs  message_envelope.rs  mod.rs
starcoin-metrics/: Cargo.toml
starcoin-metrics/src/: guards.rs  histogram.rs  lib.rs  metered_channel.rs  monitored_mpsc.rs
starcoin-metrics/src/tests/: metered_channel_tests.rs
starcoin-rpc-proxy/: Cargo.toml
starcoin-rpc-proxy/src/: main.rs
telemetry-subscribers/: Cargo.toml  README.md
telemetry-subscribers/examples/: easy-init.rs
telemetry-subscribers/src/: file_exporter.rs  lib.rs  span_latency_prom.rs
telemetry-subscribers/tests/: reload.rs
(+44 files in other folders)
