[workspace]
resolver = "2"
members = [
    "starcoin-bridge-vm-types",
    "starcoin-bridge-types",
    "starcoin-bridge-sdk",
    "starcoin-bridge-json-rpc-types",
    "starcoin-bridge-json-rpc-api",
    "starcoin-bridge-config",
    "starcoin-bridge-keys",
    "starcoin-bridge-authority-aggregation",
    "starcoin-bridge-sql-macro",
    "starcoin-bridge-macros",
    "starcoin-bridge-metrics-push-client",
    "prometheus-closure-metric",
    "bridge",
    "bridge-cli",
    "starcoin-rpc-proxy",
    "fastcrypto",
    "fastcrypto-derive",
    "shared-crypto",
    "starcoin-metrics",
    "telemetry-subscribers",
    "bin-version",
    # Indexer packages
    "bridge-indexer-monitor",
    "bridge-schema",
    "starcoin-bridge-field-count",
    "starcoin-bridge-field-count/derive",
    "starcoin-bridge-indexer-alt-metrics",
    "starcoin-bridge-indexer-builder",
    "starcoin-bridge-pg-db",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[workspace.lints.rust]
unreachable_pub = "warn"
# 检测 crate 内部未使用的代码
dead_code = "warn"

[workspace.dependencies]
proc-macro2 = "1.0"
# Commonly used external dependencies
anyhow = "1.0"
async-trait = "0.1"
axum = "0.7"
bcs = "0.1"
bs58 = "0.5"
clap = { version = "4.5", features = ["derive"] }
enum_dispatch = "0.3"
eyre = "0.6"
futures = "0.3"
hex = "0.4"
itertools = "0.10"
lru = "0.12"
move-core-types = { git = "https://github.com/starcoinorg/move", rev = "babf994a38cda17b84186c7992f92fb3554347f0" }
num_enum = "0.7"
once_cell = "1.13"
prometheus = "0.13"
rand = "0.8"
reqwest = { version = "0.11", features = ["blocking", "json"] }
schemars = { git = "https://github.com/starcoinorg/schemars", rev = "a64c6ddf7ca4796e090208b1476de2e53772042f" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = "3.8"
serde-name = "0.2"
log = "0.4"
starcoin-crypto = { git = "https://github.com/starcoinorg/starcoin-crypto", rev = "a742ddc0674022800341182cbb4c3681807b2f00" }
static_assertions = "1.1"
strum_macros = "0.27"
tap = "1.0"
tempfile = "3.8"
thiserror = "1.0"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
url = "2.3"
zeroize = "1.8.2"

# Workspace internal dependencies
arc-swap = "1.7"
backoff = { version = "0.4", features = ["tokio"] }
diesel-async = { version = "0.5", features = ["bb8", "postgres", "async-connection-wrapper"] }
pin-project-lite = "0.2"
rustls-pemfile = "2.0"
scoped-futures = "0.1"
tokio-stream = "0.1"
tokio-util = { version = "0.7", features = ["codec"] }
wiremock = "0.5"
bin-version = { path = "./bin-version" }
fastcrypto = { path = "./fastcrypto" }
starcoin-metrics = { path = "./starcoin-metrics" }
shared-crypto = { path = "./shared-crypto" }
starcoin-bridge = { path = "./bridge" }
starcoin-bridge-authority-aggregation = { path = "./starcoin-bridge-authority-aggregation" }
starcoin-bridge-config = { path = "./starcoin-bridge-config" }
starcoin-bridge-json-rpc-api = { path = "./starcoin-bridge-json-rpc-api" }
starcoin-bridge-json-rpc-types = { path = "./starcoin-bridge-json-rpc-types" }
starcoin-bridge-keys = { path = "./starcoin-bridge-keys" }
starcoin-bridge-sdk = { path = "./starcoin-bridge-sdk" }
starcoin-bridge-types = { path = "./starcoin-bridge-types" }
starcoin-bridge-vm-types = { path = "./starcoin-bridge-vm-types" }
# Indexer dependencies
starcoin-bridge-field-count = { path = "./starcoin-bridge-field-count" }
starcoin-bridge-indexer-monitor = { path = "./bridge-indexer-monitor" }
starcoin-bridge-indexer-alt-metrics = { path = "./starcoin-bridge-indexer-alt-metrics" }
starcoin-bridge-indexer-builder = { path = "./starcoin-bridge-indexer-builder" }
starcoin-bridge-pg-db = { path = "./starcoin-bridge-pg-db" }
# starcoin-bridge-rpc-api = { path = "./starcoin-bridge-rpc-api" }  # Not implemented yet
starcoin-bridge-schema = { path = "./bridge-schema" }
starcoin-bridge-macros = { path = "./starcoin-bridge-macros" }
starcoin-bridge-metrics-push-client = { path = "./starcoin-bridge-metrics-push-client" }
prometheus-closure-metric = { path = "./prometheus-closure-metric" }
starcoin-bridge-sql-macro = { path = "./starcoin-bridge-sql-macro" }
# Starcoin native types from starcoin-vm1
starcoin-vm-types = { git = "https://github.com/starcoinorg/starcoin", rev = "98eefde70a1059ad6d5b5afa54a7eeb403384dec" }
starcoin-types = { git = "https://github.com/starcoinorg/starcoin", rev = "98eefde70a1059ad6d5b5afa54a7eeb403384dec" }
starcoin-rpc-client = { git = "https://github.com/starcoinorg/starcoin", rev = "98eefde70a1059ad6d5b5afa54a7eeb403384dec" }
starcoin-account-api = { git = "https://github.com/starcoinorg/starcoin", rev = "98eefde70a1059ad6d5b5afa54a7eeb403384dec" }
starcoin-config = { git = "https://github.com/starcoinorg/starcoin", rev = "98eefde70a1059ad6d5b5afa54a7eeb403384dec" }
bcs-ext = { git = "https://github.com/starcoinorg/starcoin", rev = "98eefde70a1059ad6d5b5afa54a7eeb403384dec" }
starcoin-test-helper = { git = "https://github.com/starcoinorg/starcoin", rev = "98eefde70a1059ad6d5b5afa54a7eeb403384dec", package = "test-helper" }
starcoin-transaction-builder = { git = "https://github.com/starcoinorg/starcoin", rev = "98eefde70a1059ad6d5b5afa54a7eeb403384dec" }
starcoin-txpool-api = { git = "https://github.com/starcoinorg/starcoin", rev = "98eefde70a1059ad6d5b5afa54a7eeb403384dec", package = "starcoin-txpool-api" }
starcoin-chain = { git = "https://github.com/starcoinorg/starcoin", rev = "98eefde70a1059ad6d5b5afa54a7eeb403384dec" }
starcoin-chain-api = { git = "https://github.com/starcoinorg/starcoin", rev = "98eefde70a1059ad6d5b5afa54a7eeb403384dec" }
starcoin-consensus = { git = "https://github.com/starcoinorg/starcoin", rev = "98eefde70a1059ad6d5b5afa54a7eeb403384dec" }
starcoin-logger = { git = "https://github.com/starcoinorg/starcoin", rev = "98eefde70a1059ad6d5b5afa54a7eeb403384dec" }
starcoin-statedb = { git = "https://github.com/starcoinorg/starcoin", rev = "98eefde70a1059ad6d5b5afa54a7eeb403384dec" }
starcoin-state-api = { git = "https://github.com/starcoinorg/starcoin", rev = "98eefde70a1059ad6d5b5afa54a7eeb403384dec" }
# Starcoin native metrics with push support (renamed to avoid conflict with bridge's starcoin-metrics)
starcoin-native-metrics = { git = "https://github.com/starcoinorg/starcoin", rev = "98eefde70a1059ad6d5b5afa54a7eeb403384dec", package = "starcoin-metrics", features = ["server"] }
telemetry-subscribers = { path = "./telemetry-subscribers" }

# For proptest
proptest = "1.0"
protobuf = "2.28"

# Additional workspace dependencies
async-recursion = "1.0"
bincode = "1.3"
bytes = "1.0"
chrono = "0.4"
collectable = "0.0.2"
const-str = "0.5"
dashmap = "5.5"
derive_more = "0.99"
diesel = "2.1"
diesel_migrations = "2.1"
either = "1.9"
ethers = "2.0"
fdlimit = "0.2"
fnv = "1.0.6"
fs_extra = "1.2.0"
futures-channel = "0.3"
futures-core = "0.3.4"
futures-retry = "0.6"
futures-timer = "3.0"
futures-util = "~0.3"
git-version = "0.3"
governor = { version = "0.4.2", features = ["dashmap"] }
hdrhistogram = "7.5"
heck = "0.5.0"
hyper = { version = "0.14.12", features = ["full"] }
indicatif = "0.16.2"
jsonrpc-core = "18"
jsonrpc-core-client = "18"
jsonrpc-derive = "18"
lazy_static = "1.5.0"
libc = "^0.2"
linked-hash-map = "0.5.6"
log4rs = { version = "1.2.0", features = ["background_rotation", "gzip"] }
mirai-annotations = "1.10.1"
parking_lot = "0.12"
quote = "1.0"
regex = "1.10"
rocksdb = "0.21"
rustls = "0.21"
rustls-pki-types = "1.0"
scopeguard = "1.2"
serial_test = "3.0"
strum = "0.27"
syn = "2.0"
tracing-subscriber = "0.3"

[profile.release]
opt-level = 3
lto = "thin"
debug = false

[patch.crates-io]

# Patch old starcoin-crypto git URL to use newer version with updated zeroize
[patch."https://github.com/starcoinorg/starcoin-crypto?rev=5417dce574142c3da24adf987194a6931869f588"]
starcoin-crypto = { git = "https://github.com/starcoinorg/starcoin-crypto", rev = "a742ddc0674022800341182cbb4c3681807b2f00" }
