[package]
name = "fastcrypto-derive"
version = "0.1.3"
edition = "2021"
license = "Apache-2.0"
readme = "../README.md"
description = "Collection of useful cryptographic macros"

[lib]
proc-macro = true

[lints]
workspace = true

[dependencies]
syn = { version = "1.0.107", features = ["derive"] }
quote = "1.0.23"
