[package]
name = "prometheus-closure-metric"
version = "0.1.0"
description = "Library for a Prometheus metric that computes its value by given closure at collection time"
license = "Apache-2.0"
edition = "2021"
publish = false

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
prometheus.workspace = true
protobuf.workspace = true
