[package]
name = "starcoin-bridge-indexer-alt-metrics"
version.workspace = true
license = "Apache-2.0"
publish = false
edition = "2021"

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
axum.workspace = true
clap.workspace = true
prometheus.workspace = true
prometheus-closure-metric.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tracing.workspace = true

starcoin-bridge-pg-db.workspace = true
