[package]
name = "starcoin-bridge-metrics-push-client"
license = "Apache-2.0"
version = "0.1.0"
edition = "2021"
publish = false

[lints]
workspace = true

[dependencies]
tokio.workspace = true
tracing.workspace = true

# Bridge's own metrics (for RegistryService type)
starcoin-metrics.workspace = true
# Starcoin native metrics (for push_metrics function)
starcoin-native-metrics.workspace = true
