[package]
name = "starcoin-bridge-pg-db"
version.workspace = true
license = "Apache-2.0"
publish = false
edition = "2021"

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
bb8 = "0.8.5"
clap.workspace = true
chrono.workspace = true
diesel = { workspace = true, features = ["chrono"] }
diesel-async = { workspace = true, features = ["bb8", "postgres", "async-connection-wrapper"] }
diesel_migrations.workspace = true
futures.workspace = true
rustls = { workspace = true, features = ["dangerous_configuration"] }
rustls-pemfile.workspace = true
rustls-pki-types.workspace = true
scoped-futures.workspace = true
tempfile.workspace = true
tokio = { workspace = true, features = ["full"] }
tokio-postgres = "0.7.12"
tokio-postgres-rustls = "0.10"
tracing.workspace = true
url.workspace = true
webpki-roots = "0.26.3"

starcoin-bridge-field-count.workspace = true
starcoin-bridge-sql-macro.workspace = true

[dev-dependencies]
telemetry-subscribers.workspace = true
