[package]
name = "starcoin-bridge-sql-macro"
version.workspace = true
license = "Apache-2.0"
publish = false
edition = "2021"

[lib]
proc-macro = true

[lints]
workspace = true

[dependencies]
quote.workspace = true
syn = { version = "2.0", features = ["extra-traits", "parsing"] }
thiserror.workspace = true
