[package]
name = "starcoin-metrics"
version = "0.7.0"
license = "Apache-2.0"
publish = false
edition = "2021"

[lints]
workspace = true

[dependencies]
axum = { version = "0.8", default-features = false, features = ["tokio", "http1", "http2", "json", "matched-path", "original-uri"] }
tracing = "0.1.37"
scopeguard = "1.2.0"
prometheus = "0.13.3"
once_cell = "1.18.0"
tap = "1.0.1"
tokio = { version = "1.46", features = ["full"] }
dashmap = "5.5.3"
uuid = { version = "1.18.1", features = ["v4"] }
parking_lot = "0.12.1"
futures = "0.3.28"
async-trait = "0.1.61"
prometheus-closure-metric = { workspace = true }
simple-server-timing-header = "0.1.1"

