[package]
name = "telemetry-subscribers"
version = "0.2.0"
license = "Apache-2.0"
description = "Library for common telemetry and observability functionality"
edition = "2021"
publish = false

[lints]
workspace = true

[dependencies]
atomic_float = "1.1.0"
console-subscriber = { version = "0.4.1", default-features = false, features = ["parking_lot"] }
crossterm = "0.28.1"
once_cell = "1.18.0"
prometheus = "0.13.3"
tracing = "0.1.37"
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3.15", default-features = false, features = ["std", "smallvec", "fmt", "ansi", "time", "json", "registry", "env-filter"] }
opentelemetry = { version = "0.27.1" }
opentelemetry_sdk = { version = "0.27.1", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.27.0", features = ["grpc-tonic"] }
tracing-opentelemetry = { version = "0.28.0" }
opentelemetry-proto = { version = "0.27" }
tokio = { version = "1.46", features = ["full"] }
futures = "0.3.28"
clap = { version = "4.4", features = ["derive", "wrap_help"] }
bytes = "1.10.1"
bytes-varint = { version = "1.1.0" }

# must use same version as opentelemetry for tonic and prost, so we can't use from
# workspace
tonic = { version = "0.12.3" }
prost = "0.13"

[dev-dependencies]
camino = "1.1"

